--- a/style.css
+++ b/style.css
@@ -1,12 +1,75 @@
-#img-div{
-    max-width:100%; 
-    width:100%;
-    height:auto; 
-    display:flex;  
-}
+/* Styling the body element
+		like body color and margin */
 
-img{
-    height:auto; 
-    max-width:100%;
-    justify-content:center;
-}
+		body {
+			background-color: #9CAFAA;
+			margin: 20%;
+            font-size: 0.625%;
+            color: #ffffff;
+            
+		}
+        #trib{
+            width: 70%;
+            margin: 10px auto;
+            font-size: 0.7rem;
+        }
+
+		/* Styling the Title and giving
+		shadow to the title */
+		#title {
+			text-align: center;
+			text-shadow: 3px 3px 3px black;
+			font-size: 2rem;
+		}
+
+		/* Setting width and display
+		type of image */
+		#img-ctn { 
+            text-align: center;
+			display: inline-block;
+			width: 30%;
+            margin: auto;
+		}
+        #caption{
+            text-align: right;
+            display: inline-block;
+            font-size: 17px;
+			font-family: Gill Sans;
+			color: black;
+        }
+        #image{
+            margin: auto;
+            width: 100%;
+            display: block;
+            border-radius: 50%;
+        }
+
+		
+
+		/* Styling the content of the page like-
+		padding, font-size, font color etc.*/
+		div#tribute-data {
+			background-color:  #EFBC9B;
+			box-shadow: 5px 5px 5px #FBF3D5;
+			font-family: Georgia;
+            border-radius: 10px;
+			padding: 25px 25px;
+			margin: 11px;
+			margin-top: 50px;
+            font-size: 1.2rem;
+		}
+
+		/* Styling the title of the content */
+		h1.title-KSW {
+			font-size: 35px;
+			color: white;
+			text-align: center;
+			text-shadow: 5px 5px 10px black;
+		}
+
+		/* Styling the link provided at the end */
+		#tribute-link {
+	
+			color: black;
+            font-size: 0.7rem;
+		}
